master-service-car-dr.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  annotations:
    meta.helm.sh/release-name: master-service-car
    meta.helm.sh/release-namespace: default
  creationTimestamp: "2022-08-22T11:47:06Z"
  generation: 1
  labels:
    app: service-car
    app.kubernetes.io/instance: master-service-car
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: service-car
    app.kubernetes.io/version: 1.16.0
    helm.sh/chart: travelshift-template-0.1.0
    version: master
  name: master-service-car
  namespace: default
  resourceVersion: "259306339"
  uid: 324de0c9-9d32-46c3-bacb-730879537da4
spec:
  host: master-service-car.default.svc.cluster.local
  subsets:
  - labels:
      version: master
    name: master
